main.css
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

:root {
  --BG: #f3f3f1;
  --ALT-BG: #fff;
  --FOOTER-BG: #444444;
  --ALT-FOOTER-BG: #2a2a28;
  --TEXT-H: #2a2a28;
  --TEXT-P: #444444;
  --FF: "Manrope", sans-serif;
  --BORDER: 1px solid red;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--BG);
  display: flex;
  flex-direction: column;
  font-family: var(--FF);
  font-style: normal;
  /* max-width: 100vw; */
}

/* HEADER STYLING */
header {
  position: fixed;
  top: 0;
  left: 0;
  height: 90px;
  width: 100%;
  display: flex;
  align-items: center;
  padding-block: 30px;
  padding-inline: 50px;
  border-bottom: 1px solid hsla(0, 0%, 80%, 0.5);
  transition: top 0.4s ease;
  z-index: 1000;
  background: rgba(255, 255, 255, 0.3);
  backdrop-filter: blur(100px);
  -webkit-backdrop-filter: blur(100px);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
}

header.hidden {
  top: -90px;
}

.header-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-left {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.header-left a {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.6);
  font-size: 16px;
  font-weight: 400px;
  line-height: 19px;
  letter-spacing: -0.2px;
}

.header-left a:hover {
  color: hsla(0, 0%, 0%, 0.8);
}

.header-right {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 25px;
}
.nav {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.9);
  margin-left: 25px;
  font-size: 14px;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: -0.1px;
}
.nav:hover {
  color: #828282;
}

.icon {
  border: 1px solid hsla(0, 0%, 80%, 0.8);
  border-radius: 8px;
  padding: 7px;
}

.theme-icon {
  width: 1.5rem;
  height: 1.5rem;
}
.icon:hover {
  cursor: pointer;
}
/* END HEADER STYLING */


/*MAIN STYLING*/

/* HERO SECTION STYLING */
.hero-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-inline: 7%;
  background-color: #fff;
  border-radius: 0px 0px 60px 60px;
  padding-top: 135px;
  margin-bottom: 100px;
}
.hero-image-container {
  display: flex;
  margin-bottom: 40px;
}
.hero-image {
  width: 125px;
  height: 125px;
  border-radius: 50%;
}
.hero-section h1 {
  font-size: clamp(32px, 4vw, 55px);
  font-weight: 400;
  line-height: 1.3;
  letter-spacing: -0.5px;
  color: #201d15;
  margin-bottom: 45px;
}
.hero-section p {
  font-size:clamp(14px,2.5vw,18px);
  line-height: 1.6;
  font-weight: 400;
  color: var(--TEXT-P);
  margin-bottom: 38px;
}

.hero-socials {
  display: flex;
  flex-direction: row;
  gap: 30px;
  margin-bottom: 60px;
}
.social-icon {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border: 1px solid hsla(0, 0%, 80%, 0.532);
  padding: 12px;
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
  color: black;
}
.social-icon:hover {
  cursor: pointer;
  background-color: black;
  color: white;
}
.hero-icon {
  width: 18px;
  height: 18px;
}

.cg {
  margin: 0;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 100px;
  width: fit-content;
  max-width: 100%;
  box-sizing: border-box;
  height: fit-content;
  border: 1px solid hsla(0, 0%, 80%, 0.8);
  border-radius: 10px;
  padding: 1.5rem;
}
.cg h2 {
  font-size:clamp(32px,4vw,50px);
  letter-spacing: -1px;
  line-height: 1.2;
  font-weight: 400;
}

.container {
  margin-top: 1.5rem;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
  align-items: flex-start; 
}

.year-list {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 2rem;
}

.year-item {
  padding: 8px 12px;
  background: #eee;
  cursor: pointer;
  border-radius: 6px;
  border: 1px solid hsla(0, 0%, 80%, 0.532);
  font-weight: 400;
}

.year-item:hover {
  background: #ddd;
}
.year-item.active {
  background-color: #61d26e;
}

.graph-container {
  padding: 1rem;
  background: #f5f5f5;
  display: flex;
  flex: none;
  min-width: unset;
  flex-direction: column;
  border-radius: 10px;
  width: fit-content;
}

#total-contributions {
  margin-top: 1rem;
  font-weight: bold;
}

.month-labels {
  display: flex;
  margin-left: 25px;
  font-size: 14px;
  font-weight: 400;
  margin-bottom: 8px;
  gap: 2px;
}

.month-label {
  width: 15px;
  text-align: center;
  flex-shrink: 0;
}

.graph-row {
  display: flex;
  flex-direction: row;
}

.day-labels {
  display: flex;
  flex-direction: column;
  font-size: 10px;
  font-weight: 400;
  margin-right: 5px;
  gap: 3px;
}

.contribution-graph {
  display: flex;
  flex-direction: row;
}

.week-column {
  display: flex;
  flex-direction: column;
  gap: 3px;
  margin-right: 3px;
}

.day-block {
  width: 14px;
  height: 14px;
  background-color: #ebedf0;
  border-radius: 3px;
}

.marquee-container {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  display: flex;
  height: 240px;
  margin-bottom: 150px;
  position: relative;
  transition: animation-duration 0.3s ease;
}
.marquee-text {
  display: flex;
  animation: scroll-left 40s linear infinite;
  width: max-content;
}

.marquee-group {
  display: flex;
}

.marquee-block {
  display: inline-block;
  width: 360px;
  height: 240px;
  border-radius: 10px;
  margin-right: 10px;
}

.marquee-block img {
  height: 240px;
  width: 360px;
  border-radius: 10px;
  object-fit: cover;
}

/* Animation */
@keyframes scroll-left {
  0% {
    transform: translateX(0);
  }
  100% {
    transform: translateX(-50%);
  }
}
.marquee-container:hover .marquee-text {
  animation-play-state: paused;
}
/* ... */

